add: memo機能の設定とヘッダーの調整

--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -4,5 +4,5 @@ header.p-4
       = link_to root_path do 
         = image_tag 'logo.png'
     div.space-x-12.font-bold
-      = link_to 'アプリについて', '#', class: 'hover:text-sky-600 transition-all duration-300'
+      = link_to 'アプリについて', about_path, class: 'hover:text-sky-600 transition-all duration-300'
       = link_to 'ログイン', login_path, class: 'hover:text-sky-600 transition-all duration-300'
