add: topにゴリラの画像を追加

--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -7,5 +7,4 @@ div.flex
       | 「貸したお金をいつ返してくれるのか？」不安なあなたへ、あなたの代わりにゴリラが貸した相手に催促メールを送ります
     = link_to '新規登録', new_user_path, class: 'py-2 bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-yellow-300 hover:to-rose-500 text-white px-5 rounded-lg drop-shadow-lg'
   div.pl-40.mt-40
-    p
-      | 画像
+    = image_tag 'gorilla.png'
