--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -1,4 +1,4 @@
-div.flex
+div.flex.relative
   div.pl-40.mt-40.w-2/3
     h1.text-4xl.font-bold.pb-10
       | 返金を催促するゴリラです
@@ -6,5 +6,7 @@ div.flex
     p.pb-10.w-2/3
       | 「貸したお金をいつ返してくれるのか？」不安なあなたへ、あなたの代わりにゴリラが貸した相手に催促メールを送ります
     = link_to '新規登録', new_user_path, class: 'py-2 bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-yellow-300 hover:to-rose-500 text-white px-5 rounded-lg drop-shadow-lg'
-  div.pl-40.mt-40
+  div.pl-30.mt-40
     = image_tag 'gorilla.png'
+  div.absolute.top-10.right-96
+    = image_tag '10.png'
