add: topページにコインの追加

--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -10,3 +10,7 @@ div.flex.relative
     = image_tag 'gorilla.png'
   div.absolute.top-10.right-96
     = image_tag '10.png'
+  div.absolute.top-72.left-115
+    = image_tag '7.png'
+  div.absolute.bottom-24.right-110
+    = image_tag '5.png'
