--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: memo, local: true do |f|
+= form_with model: memo do |f|
   div
     = f.label :borrower_name, "借りた人の名前"
     = f.text_field :borrower_name
