--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -3,6 +3,6 @@ header.p-4
     div
       = link_to root_path do 
         = image_tag 'logo.png'
-    div.space-x-12.font-bold
-      = link_to 'アプリについて', about_path, class: 'hover:text-sky-600 transition-all duration-300'
-      = link_to 'ログイン', login_path, class: 'hover:text-sky-600 transition-all duration-300'
+    div.md: ml-auto.flex.flex-wrap.items-center.text-base.justify-center.font-bold
+      = link_to 'アプリについて', about_path, class: 'mr-5 hover:text-sky-600 transition-all duration-300'
+      = link_to 'ログイン', login_path, class: 'mr-5 hover:text-sky-600 transition-all duration-300'
