add: メモ機能のshow部分のデザイン

--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -10,9 +10,9 @@ div.flex.relative
       = link_to 'お金を管理', new_memo_path, class: 'ml-4 py-2 bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-yellow-300 hover:to-rose-500 text-white px-5 rounded-lg drop-shadow-lg' 
   div.pl-30.mt-40
     = image_tag 'gorilla.png'
-  div.absolute.top-10.right-96
+  div.absolute.top-10.right-96.origin-bottom.-rotate-12
     = image_tag '10.png'
   div.absolute.top-72.left-115
     = image_tag '7.png'
-  div.absolute.bottom-24.right-110
+  div.absolute.bottom-24.right-110.rotate-45
     = image_tag '5.png'
