--- a/app/views/memos/_memo.html.slim
+++ b/app/views/memos/_memo.html.slim
@@ -15,5 +15,5 @@ tbody.text-gray-600.text-sm.font-light
       div.flex.items-center.justify-center
         = memo.repayment_day
     td.py-3.px-6.text-center
-      div.flex.item-center.justify-center
+      div.flex.item-center.justify-center.py-2.px-2.rounded-lg.bg-purple-400.text-white.hover:bg-violet-500.cursor-pointer.transition-all.duration-400.drop-shadow-lg
         = link_to '詳細', memo_path(memo)
