--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -16,7 +16,7 @@ div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.w-1/2.my-52
       = f.label :notes, "備考"
       = f.text_area :notes
     div.flex.justify-end
-      = f.submit :更新
+      = f.submit :更新, class: 'm-3 py-2 px-3 bg-gradient-to-r from-teal-400 to-lime-400 rounded-lg text-white hover:text-green-500 cursor-pointer transition-all duration-400'
       -if params[:id] != nil
-        = link_to '削除', memo_path(memo), data: { turbo_method: delete }
+        = button_to '削除する', memo_path(memo), form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class: 'm-3 py-2 px-3 bg-gradient-to-r from-orange-400 to-rose-400 rounded-lg text-white hover:text-red-500 cursor-pointer transition-all duration-400'
       
