--- a/app/views/memos/show.html.slim
+++ b/app/views/memos/show.html.slim
@@ -1,3 +1,3 @@
 h1.text-4xl.text-center 貸したお金の管理をしよう🦍
 
-div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.w-1/2.my-52
+= render 'form', { memo: @memo }
