--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -1,13 +1,13 @@
 div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.w-1/2.my-52
   = form_with model: memo do |f|
     div.flex.justify-between.m-7.items-center
-      = f.label :borrower_name, "借りた人の名前"
+      = f.label :borrower_name, "借した人の名前"
       = f.text_field :borrower_name
     div.flex.justify-between.m-7.items-center
-      = f.label :money_amount, "借りた金額の合計"
+      = f.label :money_amount, "借した金額の合計"
       = f.text_field :money_amount
     div.flex.justify-between.m-7.items-center
-      = f.label :lended_day, "借りた日"
+      = f.label :lended_day, "借した日"
       = f.date_field :lended_day
     div.flex.justify-between.m-7.items-center
       = f.label :repayment_day, "返金予定日"
