fix: formのデザインを修正

--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -1,6 +1,7 @@
+= form_with model: memo do |f|
 div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.flex.justify-center
-  = form_with model: memo do |f|
-    div.px-4
+  div.px-4
+    = form_with model: memo do |f|
       div.flex.justify-between.m-7.items-center
         = f.label :borrower_name, "借した人の名前"
         = f.text_field :borrower_name
@@ -19,4 +20,4 @@ div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.flex.justify-ce
       div.flex.justify-end
         = f.submit :更新, class: 'm-3 py-2 px-3 bg-gradient-to-r from-teal-400 to-lime-400 rounded-lg text-white hover:text-green-500 cursor-pointer transition-all duration-400'
         -if params[:id] != nil
-          = button_to '削除する', memo_path(memo), form: { data: { turbo_confirm: "Are you sure?" } }, method: :delete, class: 'm-3 py-2 px-3 bg-gradient-to-r from-orange-400 to-rose-400 rounded-lg text-white hover:text-red-500 cursor-pointer transition-all duration-400'
+          = button_to '削除する', memo_path(memo), method: :delete, class: 'm-3 py-2 px-3 bg-gradient-to-r from-orange-400 to-rose-400 rounded-lg text-white hover:text-red-500 cursor-pointer transition-all duration-400'
