--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <%= favicon_link_tag('favicon.ico') %>
@@ -19,6 +18,7 @@
       <% else %>
         <%= render 'shared/before_login_header' %>
       <% end %>
+      <%= render 'shared/flash_message' %>
       <%= yield %>
     </main>
   </body>
