--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       <% end %>
       <%= render 'shared/flash_message' %>
       <%= yield %>
+      <%= render 'shared/footer'%>
     </main>
   </body>
 </html>
