--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
-class.footer.footer-center.p-10.bg-cyan-50.text-base-content.rounded
+class.footer.footer-center.p-10.text-base-content.rounded
   div.grid.grid-flow-col.gap-4
     = link_to 'アプリについて', about_path
     = link_to 'マイページ', '#'
