--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,4 +1,4 @@
-header.p-4
+header.p-4.sticky.top-0
   nav.flex.justify-between.mx-auto.container.items-center
     div
       = link_to root_path do 
