--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -1,24 +1,22 @@
 = form_with model: memo do |f|
-div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md.flex.justify-center
-  div.px-4
-    = form_with model: memo do |f|
-      div.flex.justify-between.m-7.items-center
-        = f.label :borrower_name, "借した人の名前"
-        = f.text_field :borrower_name
-      div.flex.justify-between.m-7.items-center
-        = f.label :money_amount, "借した金額の合計"
-        = f.number_field :money_amount
-      div.flex.justify-between.m-7.items-center
-        = f.label :lended_day, "借した日"
-        = f.date_field :lended_day
-      div.flex.justify-between.m-7.items-center
-        = f.label :repayment_day, "返金予定日"
-        = f.date_field :repayment_day
-      div.flex.justify-between.m-7.items-center
-        = f.label :notes, "備考"
-        = f.text_area :notes
-      div.flex.justify-end
-        = f.submit :更新, class: 'm-3 py-2 btn btn-outline btn-info'
-  / div
-  / -if params[:id] != nil
-  /   = button_to '削除する', memo_path(memo), method: :delete, form: { data: { turbo_confirm: "Are you sure?" } }, class: 'm-3 py-2 px-3 bg-gradient-to-r from-orange-400 to-rose-400 rounded-lg text-white hover:text-red-500 cursor-pointer transition-all duration-400'
+div.min-w-screen.min-h-screen.flex.items-center.justify-center
+  div.container.mx-auto.rounded.border-2.border-gray-200.shadow-md
+    div.px-8
+      = form_with model: memo do |f|
+        div.flex.justify-between.m-7.items-center
+          = f.label :borrower_name, "借した人の名前"
+          = f.text_field :borrower_name
+        div.flex.justify-between.m-7.items-center
+          = f.label :money_amount, "借した金額の合計"
+          = f.number_field :money_amount
+        div.flex.justify-between.m-7.items-center
+          = f.label :lended_day, "借した日"
+          = f.date_field :lended_day
+        div.flex.justify-between.m-7.items-center
+          = f.label :repayment_day, "返金予定日"
+          = f.date_field :repayment_day
+        div.flex.justify-between.m-7.items-center
+          = f.label :notes, "備考"
+          = f.text_area :notes
+        div.flex.justify-end
+          = f.submit :更新, class: 'm-3 py-2 btn btn-outline btn-info'
