--- a/app/views/memos/index.html.slim
+++ b/app/views/memos/index.html.slim
@@ -1,3 +1,5 @@
+= render 'search_form', url: memos_path
+
 - if @memos.present?
   div.overflow-x-auto
     div.min-w-screen.min-h-screen.flex.items-center.justify-center.font-sans.overflow-hidden
