--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,8 +1,8 @@
-dev.min-w-screen.min-h-screen.flex.flex-col
-  dev.py-28
+div.min-w-screen.min-h-screen.flex.flex-col
+  div.py-28
     h2.font-bold.text-3xl ゴリサカさんとは？
     p.mt-6 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus minima magni neque beatae? Amet eos ipsam eligendi voluptate, error aperiam quo eius. Aperiam, sapiente praesentium deleniti libero cumque vero!
-  dev
+  div
     h2.font-bold.text-3xl 使い方
     p ステップ1
     p ステップ2
