--- a/app/views/memos/_search_form.html.slim
+++ b/app/views/memos/_search_form.html.slim
@@ -1,3 +1,3 @@
 = search_form_for @q, url: url do |f|
-  = f.search_field :borrower_name_cont, placeholder: '貸した相手の名前'
-  = f.submit :検索
+  = f.search_field :borrower_name_cont, placeholder: '貸した相手の名前', class: 'w-80 h-10'
+  = f.submit :検索, class: 'btn btn-active btn-ghost py-1 ml-2'
