--- a/app/views/memos/index.html.slim
+++ b/app/views/memos/index.html.slim
@@ -1,4 +1,5 @@
-= render 'search_form', url: memos_path
+div.min-w-screen.flex.items-center.justify-center
+  = render 'search_form', url: memos_path
 
 - if @memos.present?
   div.overflow-x-auto
@@ -8,7 +9,7 @@
           table.min-w-max.w-full.table-auto
             thead
               tr.bg-gray-200.text-gray-600.uppercase.text-sm.leading-normal
-                th.py-3.px-6.text-left 貸した人
+                th.py-3.px-6.text-left 貸した相手
                 th.py-3.px-6.text-left 貸した金額
                 th.py-3.px-6.text-center 貸した日
                 th.py-3.px-6.text-center 返金予定日
