--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,9 +1,11 @@
-div.min-w-screen.min-h-screen.flex.flex-col
+div.min-w-screen.min-h-screen.flex.flex-col.items-center.justify-center
   div.py-28
     h2.font-bold.text-3xl ゴリサカさんとは？
-    p.mt-6 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus minima magni neque beatae? Amet eos ipsam eligendi voluptate, error aperiam quo eius. Aperiam, sapiente praesentium deleniti libero cumque vero!
+    p.mt-6 
+      |
+        ゴリサカさんとは、人間の代わりに返金催促をするアプリです。
   div
     h2.font-bold.text-3xl 使い方
-    p ステップ1
-    p ステップ2
-    p ステップ3
+    p.mt-6 ステップ1
+    p.mt-6 ステップ2
+    p.mt-6 ステップ3
