fix: 検索結果がなかった時の表示

--- a/app/views/memos/index.html.slim
+++ b/app/views/memos/index.html.slim
@@ -18,4 +18,5 @@ div.min-w-screen.flex.items-center.justify-center.relative
                 th.py-3.px-6.text-center 削除
             = render @memos
 - else
-  p お金の管理記録がありません 下記の管理記録から始めましょう🦍
+  div.min-w-screen.min-h-screen.flex.items-center.justify-center
+    p お金の管理記録がありません 下記の管理記録から始めましょう🦍
